[gd_scene load_steps=48 format=3 uid="uid://d1arpjvqpx162"]

[ext_resource type="Script" path="res://skripte/character_body_2d.gd" id="1_ydqq4"]
[ext_resource type="Texture2D" uid="uid://chp8p8vsqyvl8" path="res://Tiny Swords (2)/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="2_3wfrk"]
[ext_resource type="Resource" uid="uid://c4qr3j4djek1y" path="res://inventory/playerInventory.tres" id="2_a7gtc"]
[ext_resource type="Script" path="res://skripte/CanvasLayer.gd" id="3_ycfsx"]
[ext_resource type="Script" path="res://InventoryGui.gd" id="5_eupei"]
[ext_resource type="PackedScene" uid="uid://651vldd0xus0" path="res://inventory/leandrank_inventory.tscn" id="6_3j2sg"]
[ext_resource type="Texture2D" uid="uid://dhx1be03spd6a" path="res://Tiny Swords (2)/Tiny Swords (Update 010)/UI/Buttons/Button_Disable.png" id="6_4b45b"]
[ext_resource type="PackedScene" uid="uid://dbpv42spacp3n" path="res://inventory/items/xanny_drank_inventory.tscn" id="7_issje"]
[ext_resource type="PackedScene" uid="uid://bipd2fpym845g" path="res://collectables/mdma_drank_inventory.tscn" id="9_fsnj4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g42si"]
radius = 21.0
height = 52.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tngol"]
atlas = ExtResource("2_3wfrk")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3arq7"]
atlas = ExtResource("2_3wfrk")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6ikn"]
atlas = ExtResource("2_3wfrk")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_85xcc"]
atlas = ExtResource("2_3wfrk")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1mrg"]
atlas = ExtResource("2_3wfrk")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kfpy"]
atlas = ExtResource("2_3wfrk")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyd63"]
atlas = ExtResource("2_3wfrk")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4mxj"]
atlas = ExtResource("2_3wfrk")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykpg6"]
atlas = ExtResource("2_3wfrk")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf6at"]
atlas = ExtResource("2_3wfrk")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtnov"]
atlas = ExtResource("2_3wfrk")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x23co"]
atlas = ExtResource("2_3wfrk")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p0l3"]
atlas = ExtResource("2_3wfrk")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwcdk"]
atlas = ExtResource("2_3wfrk")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sgjm"]
atlas = ExtResource("2_3wfrk")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dub4f"]
atlas = ExtResource("2_3wfrk")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iop3g"]
atlas = ExtResource("2_3wfrk")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wubpp"]
atlas = ExtResource("2_3wfrk")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_noyec"]
atlas = ExtResource("2_3wfrk")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud3f1"]
atlas = ExtResource("2_3wfrk")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhk7q"]
atlas = ExtResource("2_3wfrk")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_os7o2"]
atlas = ExtResource("2_3wfrk")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e8xa"]
atlas = ExtResource("2_3wfrk")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3mto"]
atlas = ExtResource("2_3wfrk")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8tqh"]
atlas = ExtResource("2_3wfrk")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ble6n"]
atlas = ExtResource("2_3wfrk")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv6m3"]
atlas = ExtResource("2_3wfrk")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxin1"]
atlas = ExtResource("2_3wfrk")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyfym"]
atlas = ExtResource("2_3wfrk")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtmyw"]
atlas = ExtResource("2_3wfrk")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp0t2"]
atlas = ExtResource("2_3wfrk")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_20l3n"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tngol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3arq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6ikn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85xcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1mrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kfpy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyd63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4mxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykpg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf6at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtnov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x23co")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p0l3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwcdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sgjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dub4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iop3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wubpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noyec")
}],
"loop": true,
"name": &"swing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud3f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhk7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os7o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e8xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3mto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8tqh")
}],
"loop": true,
"name": &"swing_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ble6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv6m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxin1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyfym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtmyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp0t2")
}],
"loop": true,
"name": &"swing_up",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ej2m8"]
radius = 30.0

[sub_resource type="Animation" id="Animation_j2r5d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_coj2g"]
resource_name = "hitboxgehweg"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hbjp6"]
resource_name = "hitboxkommwieder"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dbtlo"]
_data = {
"RESET": SubResource("Animation_j2r5d"),
"hitboxgehweg": SubResource("Animation_coj2g"),
"hitboxkommwieder": SubResource("Animation_hbjp6")
}

[node name="player" type="CharacterBody2D"]
position = Vector2(508, 234)
script = ExtResource("1_ydqq4")
inventory = ExtResource("2_a7gtc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_g42si")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_20l3n")
animation = &"swing"

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.31

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.263

[node name="Camera2D" type="Camera2D" parent="."]

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.560784, 0.329412, 1, 1)
offset_left = -29.0
offset_top = -83.0
offset_right = 27.0
offset_bottom = -74.0
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 14.0
autostart = true

[node name="sword_hitbox_position" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="hitbox_player" type="Area2D" parent="sword_hitbox_position"]
rotation = 0.00872665
metadata/_edit_group_ = true

[node name="hitboxja" type="CollisionShape2D" parent="sword_hitbox_position/hitbox_player"]
shape = SubResource("CircleShape2D_ej2m8")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../sword_hitbox_position/hitbox_player/hitboxja")
libraries = {
"": SubResource("AnimationLibrary_dbtlo")
}

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
z_index = 2
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_g42si")

[node name="enemi_attack_cooldown" type="Timer" parent="."]
wait_time = 0.504

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_ycfsx")

[node name="InventoryGui" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_eupei")

[node name="speed_potion" type="Timer" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(-490, 250)
texture = ExtResource("6_4b45b")
offset = Vector2(0, 4)

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(-490, 204)
texture = ExtResource("6_4b45b")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(-490, 154)
texture = ExtResource("6_4b45b")

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(-490, 104)
texture = ExtResource("6_4b45b")

[node name="leandrankInventory1" parent="." instance=ExtResource("6_3j2sg")]
visible = false
position = Vector2(-490, 250)
metadata/_edit_group_ = true

[node name="leandrankInventory2" parent="." instance=ExtResource("6_3j2sg")]
visible = false
position = Vector2(-490, 200)

[node name="leandrankInventory3" parent="." instance=ExtResource("6_3j2sg")]
visible = false
position = Vector2(-490, 150)

[node name="leandrankInventory4" parent="." instance=ExtResource("6_3j2sg")]
visible = false
position = Vector2(-490, 100)

[node name="XannydrankInventory1" parent="." instance=ExtResource("7_issje")]
visible = false
position = Vector2(-490, 250)

[node name="XannydrankInventory2" parent="." instance=ExtResource("7_issje")]
visible = false
position = Vector2(-490, 200)

[node name="XannydrankInventory3" parent="." instance=ExtResource("7_issje")]
visible = false
position = Vector2(-490, 150)

[node name="XannydrankInventory4" parent="." instance=ExtResource("7_issje")]
visible = false
position = Vector2(-490, 100)

[node name="MDMADrankInventory1" parent="." instance=ExtResource("9_fsnj4")]
visible = false
position = Vector2(-490, 250)

[node name="MDMADrankInventory2" parent="." instance=ExtResource("9_fsnj4")]
visible = false
position = Vector2(-490, 200)

[node name="MDMADrankInventory3" parent="." instance=ExtResource("9_fsnj4")]
visible = false
position = Vector2(-490, 150)

[node name="MDMADrankInventory4" parent="." instance=ExtResource("9_fsnj4")]
visible = false
position = Vector2(-490, 100)

[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
[connection signal="body_entered" from="sword_hitbox_position/hitbox_player" to="." method="_on_hitbox_player_body_entered"]
[connection signal="body_exited" from="sword_hitbox_position/hitbox_player" to="." method="_on_hitbox_player_body_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
